# eaw2web

./: .gitignore  pyproject.toml  pyrightconfig.json  setup.cfg
eaw2web/: __main__.py  config.py  export.py  gameobjecttypes.py  icon.py  load.py  modstack.py  pipeline.py  text.py  typing.py  writers.py
eaw2web/cli/: progressreporters.py  wrappers.py
eaw2web/export/: __init__.py  _campaignplot.py  _export.py  icons.py  json.py  xml.py
eaw2web/export/templates/: campaign.xml.j2
eaw2web/filters/: playablefaction.py
eaw2web/gameobjecttypes/: __init__.py  atomics.py  campaign.py  faction.py  generic.py  planet.py  unit.py  variants.py
eaw2web/transformers/: campaignsets.py
eaw2web/xml/: base.py  campaign.py  collectors.py  faction.py  generic.py  icon.py  parser.py  planet.py  tags.py  text.py  textentries.py  traderoutes.py  units.py
