[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"


[project]
name = "eaw2web"
version = "0.4.0"
description = ""
authors = [
    {name = "Sven Marcus", email = "s.marcus@outlook.de"},
]
dependencies = [
    "Pillow>=10.2.0",
    "pydantic>=2.6",
    "typer[all]>=0.7.0",
    "Jinja2>=3.1.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
eaw2web = "eaw2web.__main__:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",
    "black>=23.1.0",
    "ruff>=0.0.254",
    "types-Pillow>=9.4.0.17",
]

[tool.mypy]
plugins = "pydantic.mypy"

[tool.mypy-PIL]
ignore_missing_imports = true

[tool.pdm]
